final flex-box layout tutorial

--- a/index.html
+++ b/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <title>Flexing Boxes</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div class="menu-container">
     <div class="menu">
       <div class="date">Nov 3, 2017</div>
-      <div class="links">
         <div class="signup">Sign Up</div>
         <div class="login">Login</div>
       </div>
     </div>
+  <div class="header-container">
+    <div class="header">
+      <div class="subscribe">Subscribe &#9662;</div>
+      <div class="logo">
+        <img src="/Users/jc/github/flexbox-project/images/cloudman.jpg" />
+      </div>
+      <div class="social">
+        <img src="/Users/jc/github/flexbox-project/images/Ryu.jpg" />
+      </div>
+    </div>
+  </div>
+  <div class="photo-grid-contianer">
+    <div class="photo-grid">
+      <div class="photo-grid-items first-item">
+        <img src="/Users/jc/github/flexbox-project/images/Unknown.jpg" />
+      </div>
+      <div class="photo-grid-item">
+        <img src="/Users/jc/github/flexbox-project/images/Unknown.jpg" />
+      </div>
+      <div class="photo-grid-item">
+        <img src="/Users/jc/github/flexbox-project/images/flexing.gif" />
+      </div>
+      <div class="photo-grid-item">
+        <img src="/Users/jc/github/flexbox-project/images/cloudman.jpg" />
+      </div>
+      <div class="photo-grid-item last-item">
+        <img src="/Users/jc/github/flexbox-project/images/Ryu.jpg" />
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-item footer-one"> </div>
+    <div class="footer-item footer-two"> </div>
+    <div class="footer-item footer-three"> </div>
   </div>
 </body>
+
 </html>
